<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name" translatable="false">AutoBoard</string>
  <string name="action_settings">Configurações</string>
  <string name="command_list">Escolha um comando</string>
  <string name="service_started">Conexão com o OBD iniciada</string>
  <string name="service_stopped">Conexão com o OBD perdida</string>
  <string name="notification_label">Toque para iniciar a leitura dos dados</string>
  <string name="title_activity_trouble_codes">Códigos de erro</string>
  <string name="pref_upload_category_title">Upload de dados</string>
  <string name="pref_upload_category" translatable="false">upload_category</string>
  <string name="title_activity_trips_list">Lista de viajens</string>
  <string name="menu_trip_list">Viagens</string>
  <string name="menu_item_trip_delete">Deletar</string>
  <string name="pref_gps_category" translatable="false">gps_category</string>
  <string name="dialog_loading_title">Carregando...</string>
  <string name="dialog_loading_body">Carregando aplicação, por favor espere...</string>
  <string name="menu_start_live_data">Iniciar leitura dos dados</string>
  <string name="menu_stop_live_data">Parar leitura dos dados</string>
  <string name="menu_settings">Configurações</string>
  <string name="menu_get_dtc">Get DTC</string>
  <string name="text_gps" translatable="false">GPS</string>
  <string name="text_bluetooth" translatable="false">Bluetooth</string>
  <string name="text_neutral" translatable="false">N</string>
  <string name="text_zero" translatable="false">0</string>
  <string name="text_consumption_default" translatable="false">0l/100km</string>
  <string name="text_runtime_default" translatable="false">00:00:00</string>
  <string name="title_pref_obd">Preferências do OBD</string>
  <string name="title_pref_commands">Comandos OBD</string>
  <string name="title_pref_bluetooth" translatable="false">Bluetooth</string>
  <string name="title_pref_gps" translatable="false">GPS</string>
    <string name="title_activity_register_plus">RegisterPlus</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register_choose">RegisterChoose</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_recover_password">RecoverPassword</string>
</resources>
