<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/pref_upload_category"
        android:title="@string/pref_upload_category_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:dialogTitle="Upload dos dados"
            android:key="upload_data_preference"
            android:summaryOff="Desativar upload dos dados colhidos"
            android:summaryOn="Ativar upload dos dados colhidos"
            android:title="Ativar upload dos dados" />
        <EditTextPreference
            android:defaultValue="http://www.example.com/obd/get_data.php"
            android:dialogTitle="Upload URL"
            android:key="upload_url_preference"
            android:summary="URL para onde os dados colhidos em tempo real deverao ser enviados"
            android:title="Upload URL"  />
        <EditTextPreference
            android:defaultValue=""
            android:dialogTitle="ID do veiculo"
            android:key="vehicle_id_preference"
            android:summary="ID unico do carro (OPICIONAL), usado para upload dos dados"
            android:title="ID do veiculo" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/title_pref_bluetooth">
        <CheckBoxPreference
            android:defaultValue="false"
            android:dialogTitle="Ativar Bluetooth"
            android:key="enable_bluetooth_preference"
            android:summaryOff="Ativar Bluetooth"
            android:summaryOn="Desativar Bluetooth"
            android:title="Bluetooth" />
        <ListPreference
            android:dialogTitle="Dispositivos Bluetooth"
            android:key="bluetooth_list_preference"
            android:summary="Lista de dispositivos pareados"
            android:title="Dispositivos Bluetooth" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/title_pref_gps"
        android:key="@string/pref_gps_category">
        <CheckBoxPreference
            android:defaultValue="false"
            android:dialogTitle="Ativar GPS"
            android:key="enable_gps_preference"
            android:summaryOff="Ativar o GPS do dispositivo"
            android:summaryOn="Desativar o GPS do dispositivo"
            android:title="Ativar GPS" />
        <EditTextPreference
            android:defaultValue="1"
            android:dialogTitle="Periodo de atualizaçao em segundos"
            android:key="gps_update_period_preference"
            android:summary="O intervalo em segundos para atualizar os dados"
            android:title="Periodo de atualizaçao em segundos" />
        <EditTextPreference
            android:defaultValue="5"
            android:dialogTitle="Distancia para atualizaçao em metros"
            android:key="gps_distance_period_preference"
            android:summary="Distancia minima para atualizar os dados"
            android:title="Distancia para atualizaçao em metros" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/title_pref_obd">
        <ListPreference
            android:defaultValue="AUTO"
            android:dialogTitle="Protocolos OBD"
            android:key="obd_protocols_preference"
            android:summary="Selecione o protocolo OBD para ser usado"
            android:title="Protocolos OBD" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dialogTitle="Imperial Units"
            android:key="imperial_units_preference"
            android:summaryOff="Enable imperial units"
            android:summaryOn="Go back to metric units"
            android:title="Imperial Units" />
        <EditTextPreference
            android:defaultValue="4"
            android:dialogTitle="Periodo em atualizacao em segundos"
            android:key="obd_update_period_preference"
            android:summary="The length of time between querying vehicle data in seconds"
            android:title="Periodo em atualizacao em segundos" />
        <EditTextPreference
            android:defaultValue="70"
            android:dialogTitle="Maximum Fuel Economy Value"
            android:key="max_fuel_econ_preference"
            android:summary="Any fuel economy values larger than this will be thrown out"
            android:title="Maximum Fuel Economy Value" />
        <EditTextPreference
            android:defaultValue=".85"
            android:dialogTitle="Volumetric Efficiency (eg 0.85)"
            android:key="volumetric_efficiency_preference"
            android:summary="Used for fuel economy on vehicles without MAF sensor"
            android:title="Volumetric Efficiency" />
        <EditTextPreference
            android:defaultValue="1.6"
            android:dialogTitle="Engine Displacement (liters)"
            android:key="engine_displacement_preference"
            android:summary="Used for fuel economy on vehicles without MAF sensor"
            android:title="Engine Displacement (liters)" />
        <EditTextPreference
            android:defaultValue="atsp0\natz"
            android:dialogTitle="Reader Config Commands"
            android:key="reader_config_preference"
            android:summary="Commands to configure bluetooth reader, separate with new line"
            android:title="Reader Config Commands" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/title_pref_commands">
        <PreferenceScreen
            android:key="obd_commands_screen"
            android:summary="Select the commands you would like to see in real-time."
            android:title="OBD Commands">
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>
